syntax = "proto3";

package embedding;

message SentenceEmbeddingRequest {
    // The article to be embedded as vector.
    string article = 1;
    optional string prefix = 2;
}

message SentenceEmbeddingVector{
    // The embedded vector of sentence.
    repeated float vector = 1;
}
message SentenceEmbeddingResponse {
    // The embedded sentence vectors of the article.
    repeated SentenceEmbeddingVector embeddings = 1;
}